[package]
name = "playground"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object_store = { version = "0.9.0", features = ["aws"] }
axum = { version = "0.7.4", features = ["multipart"] }
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace"] }
dotenvy = "0.15.7"
uuid = { version = "1.7.0", features = ["v4"] }
