[package]
name = "playground"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
object_store = { version = "0.9.0", features = ["aws"] }
axum = { version = "0.7.4", features = ["multipart","macros"] }
tokio = { version = "1.36", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace"] }
dotenvy = "0.15.7"
uuid = { version = "1.7.0", features = ["v4"] }
sqlx = { version = "0.7.3", features = ["postgres", "chrono", "runtime-async-std"] }
chrono = { version = "0.4.33", features = ["clock"] }
oauth2 = "4.4.2"
reqwest = "0.11.24"
secrecy = { version = "0.8.0", features = ["serde"] }
axum-extra = { version = "0.9.2", features = ["cookie-private"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tracing = "0.1.40"
time = "0.3.34"
tracing-subscriber = "0.3.18"
subtle = "2.5.0"
async-trait = "0.1.77"
thiserror = "1.0.56"
tower-sessions = "0.10.2"
json-patch = "*"